--- a/app/src/main/res/layout/row_item_beacon.xml
+++ b/app/src/main/res/layout/row_item_beacon.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvBeaconIdentifier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="10sp"
         android:gravity="start"
         android:textSize="20sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,12 +19,11 @@
         android:id="@+id/tvLastText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20sp"
         android:gravity="start"
         android:text="@string/beacon_last_read"
-        android:layout_marginStart="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvBeaconIdentifier" />
-
 
     <TextView
         android:id="@+id/tvBeaconLastReading"
@@ -40,10 +38,35 @@
         android:id="@+id/tvBeaconLastSeen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="start"
         android:layout_marginEnd="20sp"
         android:layout_marginBottom="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="start"
+        app:layout_constraintEnd_toStartOf="@+id/ivBeaconStatus"
         app:layout_constraintTop_toBottomOf="@+id/tvBeaconIdentifier" />
+
+    <ImageView
+        android:id="@+id/ivBeaconStatus"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:layout_marginEnd="10sp"
+        android:src="@drawable/check"
+        app:layout_constraintBottom_toBottomOf="@+id/tvLastText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvBeaconInfoIncomplete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawablePadding="8sp"
+        android:gravity="center_vertical"
+        android:minHeight="30sp"
+        android:text="@string/beacon_info_incomplete"
+        android:textColor="@color/warning_orange"
+        app:drawableStartCompat="@drawable/warning"
+        app:drawableTint="@color/warning_orange"
+        app:layout_constraintEnd_toEndOf="@+id/tvBeaconLastSeen"
+        app:layout_constraintTop_toBottomOf="@+id/tvLastText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
