Squashed commit of the following:
commit bbc772d83bf3db6e991dc4b6d96f15d4bc143af5
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Feb 21 11:02:50 2025 +0000

    refactor / optim start

commit 17f42a841dc40de35753df1869ae10afc8003507
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Feb 21 10:32:46 2025 +0000

    avoid uploading VIPV_bodies

commit 289a8c28f258457453a2cbd7fc4979466ffccd8f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 18:10:05 2025 +0000

    linter

commit 33a4b486f40aa727d996dd9c0807950f79192577
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 18:02:05 2025 +0000

    linter

commit ac6382d5eb533ee01c89a5736b5d20276be1de9b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 18:01:58 2025 +0000

    fix tests

commit 6b460a85db0be8d122203f88ad2da27ffc85b091
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 17:56:37 2025 +0000

    linter

commit 6604f332370c8531be83c0998875cee81022a0c1
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 17:49:46 2025 +0000

    rename app package to es.upm.ies.vipvble

commit 44c1d36c759032487454acb8b22ecf74cd2af2fa
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:19:24 2025 +0000

    auto formattign

commit 1008c82abcfaed4914a98e07f38381209fbbc005
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:12:42 2025 +0000

    Update AndroidManifest.xml

commit 1075510ce81cedc059af45db48a3521d1b071fe2
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:01:11 2025 +0000

    fix sintax issues and some other minor things

commit fb06e11513d3dd19873cc38ad8598c486c43c1da
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:00:47 2025 +0000

    tweak 

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,20 +46,6 @@
         android:layout_gravity="bottom">
 
         <ImageButton
-            android:id="@+id/imBtnActionEmptyAll"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:layout_marginHorizontal="20sp"
-            android:background="@null"
-            android:contentDescription="@string/current_session_empty"
-            android:tooltipText="@string/current_session_empty"
-            android:padding="14sp"
-            android:scaleType="centerInside"
-            android:src="@drawable/delete_forever_bin"
-            app:tint="@color/white"/>
-
-        <ImageButton
             android:id="@+id/imBtnActionUploadSession"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -74,7 +60,7 @@
             app:tint="@color/white"/>
 
         <ImageButton
-            android:id="@+id/imBtnActionShareSession"
+            android:id="@+id/imBtnActionManageSessions"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
@@ -84,7 +70,7 @@
             android:tooltipText="@string/current_session_share"
             android:padding="14sp"
             android:scaleType="centerInside"
-            android:src="@drawable/share"
+            android:src="@drawable/file_open"
             app:tint="@color/white"/>
 
     </com.google.android.material.bottomappbar.BottomAppBar>
