--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BeaconBLE" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.surCO" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/IES_blue_main</item>
         <item name="colorPrimaryVariant">@color/IES_blue_dark</item>
@@ -10,23 +10,23 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Preferences style overriding -->
-        <item name="preferenceTheme">@style/Theme.BeaconBLE.Preferences</item>
+        <item name="preferenceTheme">@style/Theme.surCO.Preferences</item>
     </style>
 
     <!-- Light mode application theme. -->
-    <style name="Theme.BeaconBLE.Light" parent="Theme.BeaconBLE">
+    <style name="Theme.surCO.Light" parent="Theme.surCO">
         <!-- Primary brand color. -->
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorOnSecondary">@color/black</item>
     </style>
     
-    <style name="Theme.BeaconBLE.ActionBar" parent="Base.ThemeOverlay.AppCompat.ActionBar">
+    <style name="Theme.surCO.ActionBar" parent="Base.ThemeOverlay.AppCompat.ActionBar">
         <!-- Navigation bar color. -->
         <item name="android:textColorPrimary">@color/white</item>
     </style>
 
-    <style name="Theme.BeaconBLE.Preferences" parent="PreferenceThemeOverlay">
+    <style name="Theme.surCO.Preferences" parent="PreferenceThemeOverlay">
         <item name="preferenceCategoryTitleTextColor">@color/teal_700</item>
         <item name="android:tint">@color/teal_700</item>
     </style>
