--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -101,6 +101,27 @@
                     android:layout_margin="10sp"
                     android:text="@string/permission_grant" />
             </TableRow>
+
+            <TableRow
+                android:id="@+id/rowDisableBatteryOptimization"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/text_battery_whitelist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/battery_whitelist"
+                    android:layout_gravity="center_vertical"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnDisableBatteryOptimization"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:text="@string/permission_grant" />
+            </TableRow>
+
         </TableLayout>
 
     </LinearLayout>
