Squashed commit of the following:
commit 6b434f39cc1aad3e11a298624572efc9fa0ff066
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed May 28 22:38:55 2025 +0100

    Update README.md

commit 92959b54b7a9ae1bc6960e4a008cacc034ce71f6
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri May 23 09:54:34 2025 +0100

    Create LICENSE

commit ecb8812065ae57008e0ab1e8de68f254a61eeeff
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 16:24:05 2025 +0100

    yet another gradle update

commit 82cad081f996ef93b08247613f3709e5165a84fc
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 14:24:34 2025 +0100

    Create README.md

commit 6c5ee96292f6e25de9040dde2496cfdc85c7e40a
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 14:24:30 2025 +0100

    VS Code recommended extension

commit 014df2688938077de9fa65da765f5a4fd96f8e5b
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 13:17:38 2025 +0100

    clarify deprecation fix for the future

commit 479055eeb8eae14b28428411d23e007f7025c426
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 13:17:26 2025 +0100

    speed up build process

commit f8481c1907b2246f38cf9116d86af105b7f194b9
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 13:17:12 2025 +0100

    update deps

commit bfb9b6c45d7cba7661c769a2e3aed289704a67b2
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri May 9 13:35:03 2025 +0100

    Bugfix: beacons counter is not affected on beacon deletion

commit bea860ffdfc52094f293402faefa8242b1a02dbf
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri May 9 13:28:57 2025 +0100

    Sessions Management : observe on cached s

--- a/app/src/main/res/layout/fragment_beacon_details.xml
+++ b/app/src/main/res/layout/fragment_beacon_details.xml
@@ -46,24 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5sp"
-        android:text="@string/beacon_info_incomplete"
         android:gravity="center"
+        android:text="@string/beacon_info_incomplete"
         app:drawableStartCompat="@drawable/check"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerIdentifier" />
-
-    <Spinner
-        android:id="@+id/spinnerPosition"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30sp"
-        android:layout_marginEnd="30sp"
-        android:entries="@array/beacon_positions"
-        android:minHeight="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvBeaconStatusMessage" />
 
     <TableLayout
         android:id="@+id/tableLayoutTiltDirection"
@@ -72,7 +60,29 @@
         android:layout_marginHorizontal="30sp"
         android:layout_marginVertical="5sp"
         android:shrinkColumns="0,2"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerPosition">
+        app:layout_constraintTop_toBottomOf="@+id/tvBeaconStatusMessage">
+
+        <TableRow
+            android:id="@+id/tableRowPosition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <Spinner
+                android:id="@+id/spinnerPosition"
+                android:layout_width="235dp"
+                android:layout_height="wrap_content"
+                android:layout_span="5"
+                android:entries="@array/beacon_positions"
+                android:minHeight="48sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvBeaconStatusMessage" />
+
+        </TableRow>
 
         <TableRow
             android:id="@+id/tableRowTilt"
