--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,9 +21,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0sp"
-            app:layout_constraintVertical_weight="1"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/beaconCountTextView">
+            app:layout_constraintTop_toBottomOf="@+id/beaconCountTextView"
+            app:layout_constraintVertical_weight="1">
 
             <ListView
                 android:id="@+id/beaconListView"
@@ -53,11 +52,11 @@
             android:layout_marginHorizontal="16sp"
             android:background="@null"
             android:contentDescription="@string/all_sessions_upload"
-            android:tooltipText="@string/all_sessions_upload"
             android:padding="14sp"
             android:scaleType="centerInside"
             android:src="@drawable/upload_cloud"
-            app:tint="@color/white"/>
+            android:tooltipText="@string/all_sessions_upload"
+            app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/imBtnActionManageSessions"
@@ -67,11 +66,11 @@
             android:layout_marginHorizontal="0sp"
             android:background="@null"
             android:contentDescription="@string/current_session_share"
-            android:tooltipText="@string/current_session_share"
             android:padding="14sp"
             android:scaleType="centerInside"
             android:src="@drawable/file_open"
-            app:tint="@color/white"/>
+            android:tooltipText="@string/current_session_share"
+            app:tint="@color/white" />
 
     </com.google.android.material.bottomappbar.BottomAppBar>
 
@@ -80,8 +79,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/start_button"
-        android:tooltipText="@string/start_button"
         android:tint="@color/black"
+        android:tooltipText="@string/start_button"
         app:layout_anchor="@id/bottomAppBar"
         app:srcCompat="@drawable/triangle_start" />
 
