--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -118,7 +118,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:backgroundTint="#898787"
-        android:text="@string/use_offline"
+        android:text="@string/continue_offline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUseOffline" />
