--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="16sp"
     android:orientation="vertical"
-    tools:context=".ui.AboutFragment">
+    tools:context=".ui.FragAbout">
 
     <ImageView
         android:layout_width="100sp"
