--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_homeFragment_to_fragManageSessions"
             app:destination="@id/fragManageSessions" />
+        <action
+            android:id="@+id/action_homeFragment_to_privacyPolicyFragment"
+            app:destination="@id/privacyPolicyFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragSettings"
@@ -36,10 +39,13 @@
         <action
             android:id="@+id/action_settingsFragment_to_fragManageSessions"
             app:destination="@id/fragManageSessions" />
+        <action
+            android:id="@+id/action_settingsFragment_to_privacyPolicyFragment"
+            app:destination="@id/privacyPolicyFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragAbout"
-        android:name="es.upm.ies.surco.ui.AboutFragment"
+        android:name="es.upm.ies.surco.ui.FragAbout"
         android:label="@string/about">
         <action
             android:id="@+id/action_aboutFragment_to_homeFragment"
@@ -67,6 +73,9 @@
         <action
             android:id="@+id/action_fragLogin_to_fragRegister"
             app:destination="@id/fragRegister" />
+        <action
+            android:id="@+id/action_fragLogin_to_privacyPolicyFragment"
+            app:destination="@id/privacyPolicyFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragRegister"
@@ -81,6 +90,9 @@
             app:launchSingleTop="true"
             app:popUpTo="@+id/main_nav"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_fragRegister_to_privacyPolicyFragment"
+            app:destination="@id/privacyPolicyFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragManageSessions"
@@ -89,5 +101,23 @@
         <action
             android:id="@+id/action_settingsFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/privacyPolicyFragment"
+        android:name="es.upm.ies.surco.ui.FragPrivacyPolicy"
+        android:label="@string/privacy_policy_title"
+        tools:layout="@layout/fragment_privacy_policy" >
+        <action
+            android:id="@+id/action_privacyPolicyFragment_to_fragLogin"
+            app:destination="@id/fragLogin" />
+        <action
+            android:id="@+id/action_privacyPolicyFragment_to_fragRegister"
+            app:destination="@id/fragRegister" />
+        <action
+            android:id="@+id/action_privacyPolicyFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_privacyPolicyFragment_to_fragSettings"
+            app:destination="@id/fragSettings" />
     </fragment>
 </navigation>
