--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
+    <!--domain-config cleartextTrafficPermitted="true"> These already have HTTPS support
         <domain includeSubdomains="true">vps247.cesvima.upm.es</domain>
-    </domain-config>
+        <domain includeSubdomains="true">surco.ies.upm.es</domain>
+    </domain-config!-->
 </network-security-config>
